--- a/pom.xml
+++ b/pom.xml
@@ -1,79 +1,89 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>eu.w4.ps</groupId>
-  <artifactId>genActor</artifactId>
-  <version>1.0</version>
-  <packaging>jar</packaging>
+	<groupId>eu.w4.ps</groupId>
+	<artifactId>genActor</artifactId>
+	<version>1.0</version>
+	<packaging>jar</packaging>
 
-  <name>genActor</name>
-  <url>http://maven.apache.org</url>
+	<name>genActor</name>
+	<url>http://maven.apache.org</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-  
-  <build>
-    <plugins>
-      <plugin>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <version>2.4</version>
-        <configuration>
-          <descriptor>src/assembly/assembly.xml</descriptor>
-        </configuration>
-        <executions>
-          <execution>
-            <goals>
-              <goal>single</goal>
-            </goals>
-            <phase>package</phase>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.6</maven.compiler.source>
+		<maven.compiler.target>1.6</maven.compiler.target>
+	</properties>
 
-  <dependencies>
-  
-   <!-- jUnit -->
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-    
-     <!-- jxl -->
-    <dependency>
-		<groupId>net.sourceforge.jexcelapi</groupId>
-		<artifactId>jxl</artifactId>
-		<version>2.6</version>
-	</dependency>
-	
-	 <!-- W4 -->
-	<dependency>
-		<groupId>eu.w4</groupId>
-		<artifactId>bpmn-engine-client</artifactId>
-		<version>9.2.0.0</version>
-	</dependency>
-	<dependency>
-		<groupId>eu.w4</groupId>
-		<artifactId>w4-common-client</artifactId>
-		<version>9.2.0.0</version>
-	</dependency>
-  </dependencies>
-   
-   <repositories>
-    <repository>
-      <id>w4store</id>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-      <url>http://maven.w4store.com/repository/all/</url>
-    </repository>
-  </repositories>
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.4</version>
+				<configuration>
+					<descriptor>src/assembly/assembly.xml</descriptor>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+					<archive>
+						<manifest>
+							<mainClass>eu.w4.ps.genActor.excel.Main</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>single</goal>
+						</goals>
+						<phase>package</phase>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+
+	<dependencies>
+
+		<!-- jUnit -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- jxl -->
+		<dependency>
+			<groupId>net.sourceforge.jexcelapi</groupId>
+			<artifactId>jxl</artifactId>
+			<version>2.6</version>
+		</dependency>
+
+		<!-- W4 -->
+		<dependency>
+			<groupId>eu.w4</groupId>
+			<artifactId>bpmn-engine-client</artifactId>
+			<version>9.2.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>eu.w4</groupId>
+			<artifactId>w4-common-client</artifactId>
+			<version>9.2.0.0</version>
+		</dependency>
+	</dependencies>
+
+	<repositories>
+		<repository>
+			<id>w4store</id>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<url>http://maven.w4store.com/repository/all/</url>
+		</repository>
+	</repositories>
 </project>
